--- a/src/pages/Demo/Demo.less
+++ b/src/pages/Demo/Demo.less
@@ -1,9 +1,15 @@
 .toolbar {
   margin-bottom: 16px;
 }
-.toolbar button :first-child {
+.toolbar button:first-child {
   margin-left: 0;
 }
 .toolbar button {
   margin-left: 10px;
+}
+.selectLoading {
+  position: absolute;
+  display: flex;
+  right: 10px;
+  top: 12px;
 }
