--- a/src/components/Osearch/index.less
+++ b/src/components/Osearch/index.less
@@ -1,5 +1,6 @@
 @import "~antd/lib/style/themes/default.less";
 .globalSearchWrapper {
+  margin-bottom: 16px;
   :global {
     .ant-menu > .ant-select-dropdown-menu-item >a {
       color: rgba(0, 0, 0, 0.65);
@@ -34,16 +35,25 @@
   }
   .searchTips ul li {
     display: inline-block;
+    height: 0;
   }
   .searchTips ul {
     padding-left: 13px;
-    height: 20px;
+    position: absolute;
+    top: 28px;
+    z-index: 10;
+    height: 0;
     margin: 0;
   }
   .searchTips ul li span.tips {
-    background: #2a2a2a;
-    color: #fff;
-    font-size: 12px;
-    text-align: center;
+    //color: #fff;
+    //font-size: 12px;
+    //text-align: center;
+    cursor: help;
+    border-top: 2px solid #2a2a2a;
+  }
+  .dropDown {
+    position: absolute;
+    width: 100%;
   }
 }
