--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -36,9 +36,9 @@
   margin-right: 10px;
 }
 .menuLoading {
-  width: 100%;
-  text-align: center;
-  margin: 50px auto;
+  position: absolute;
+  top: calc(64px + 60px);
+  left: calc(256px / 2 - 32px / 2);
 }
 
 :global {
