--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -2,7 +2,10 @@
 :global {
   .ant-layout {
     transition-duration: .4s;
-    transition-timing-function: cubic-bezier(.25,.8,.25,1);
-    transition-property: transform,margin-left,margin-right;
+    transition-timing-function: cubic-bezier(.25, .8, .25, 1);
+    transition-property: transform, margin-left, margin-right;
+  }
+  .placeholder {
+    display: block;
   }
 }
