--- a/src/layouts/PageHeaderLayout.less
+++ b/src/layouts/PageHeaderLayout.less
@@ -3,9 +3,18 @@
 .content {
   margin: 24px 24px 0;
 }
-
 @media screen and (max-width: @screen-sm) {
   .content {
-    margin: 24px 0 0;
+    margin: 12px 0 0;
+  }
+}
+@media screen and (max-width: @screen-xl) {
+  .content {
+    margin: 12px 12px 0;
+  }
+}
+@media screen and (max-width: @screen-xxl) {
+  .content {
+    margin: 16px 16px 0;
   }
 }
