--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -1,13 +1,12 @@
 @import "~antd/lib/style/themes/default.less";
 .container {
   background: #f0f2f5;
-  //background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
   background-image: url('../assets/login/login.jpg');
   width: 100%;
   min-height: 100%;
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: 100%;
+  background-size: cover;
   position: relative;
 }
 .panel {
