[完美][master][pep-272] 前端流程设计 (#79)
* 编辑，上传，下载

* 优化代码

* 用户组信息

* 处理null的情况

* Merge branch 'master' of https://github.com/propersoft-cn/proper-enterprise-app into master-work

* 添加代理数据

* mock数据

* 状态

--- a/src/pages/Workflow/Designer.less
+++ b/src/pages/Workflow/Designer.less
@@ -26,7 +26,8 @@
     :global {
 
       .ant-card-cover {
-        height: 150px !important;
+        height: 150px;
+        padding: 8px;
         display: flex;
         justify-content: center;
         overflow: hidden;
