--- a/src/index.less
+++ b/src/index.less
@@ -28,6 +28,9 @@ body {
   .ant-spin-container {
     overflow: visible !important;
   }
+  .ant-notification-notice-message {
+    word-break: break-all;
+  }
 }
 // scrollbar style
 ::-webkit-scrollbar {
