--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -53,7 +53,8 @@ i.trigger {
   .action {
     cursor: pointer;
     padding: 0 12px;
-    display: inline-block;
+    //隐藏掉 inline-block
+    display: none;
     transition: all .3s;
     height: 100%;
     > i {
@@ -73,6 +74,7 @@ i.trigger {
     }
   }
   .account {
+    display: inline-block;
     .avatar {
       margin: 20px 8px 20px 0;
       color: @primary-color;
