--- a/src/components/CustomFrame/Exam/index.less
+++ b/src/components/CustomFrame/Exam/index.less
@@ -1,8 +1,20 @@
 .examWrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .examName {
-    height: 64px;
-    line-height: 64px;
+    height: 56px;
+    line-height: 56px;
     text-align: center;
+    border-bottom: 1px solid #d9d9d9;
+  }
+
+  :global {
+    .ant-row {
+      display: flex;
+      flex: 1;
+      overflow-y: auto;
+    }
   }
 }
