--- a/src/components/CustomFrame/Exam/index.less
+++ b/src/components/CustomFrame/Exam/index.less
@@ -10,6 +10,13 @@
     border-bottom: 1px solid #d9d9d9;
   }
 
+  .examNameFooter {
+    text-align: center;
+    height: 48px;
+    line-height: 48px;
+    border-top: 1px solid #d9d9d9;
+  }
+
   :global {
     .ant-row {
       display: flex;
