[完美][master][pep-406] 修改联调问题 (#133)
* 修改问题

- 角色关联用户组时，页面崩溃（详见附件截图）；关闭后再点编辑和查看均无响应
- 角色关联用户时的操作提示无文字
- 删除菜单的三种类型
- 用户管理列表页密码不应该显示出来
- 功能管理左侧功能树第一次点击能看到正确数据，再次点击看到了所有数据
- 功能管理新建时父节点只能选择一级节点，不能选择二级节点

* 修改checkbox样式

--- a/src/components/CustomFrame/Exam/index.less
+++ b/src/components/CustomFrame/Exam/index.less
@@ -24,5 +24,9 @@
       flex: 1;
       overflow-y: auto;
     }
+    .ant-checkbox-group-item {
+      display: block;
+      margin-bottom: 5px;
+    }
   }
 }
