--- a/src/modules/Auth/pages/Group.less
+++ b/src/modules/Auth/pages/Group.less
@@ -1,11 +1,10 @@
 @import "~antd/lib/style/themes/default.less";
 @import "../../../utils/utils.less";
 
-.tableList {
-  .tableListOperator {
-    margin-bottom: 16px;
-    button {
-      margin-right: 8px;
+.anthGroupStyles {
+  :global {
+    .ant-input-number {
+      width: 50%;
     }
   }
 }
