[完美][develop][PEP-484]自定义表单-数据 共享bug修复 (#163)
* package变更

* 自定义表单

--- a/src/modules/Form/pages/Designer.less
+++ b/src/modules/Form/pages/Designer.less
@@ -1,27 +1,5 @@
 .container {
   position: relative;
-  .leftPage {
-    padding-right: 350px;
-  }
-  .rightPage {
-    width: 350px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    :global {
-      .ant-form-item {
-        margin-bottom: 0;
-      }
-    }
-  }
-  .addPanel {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 290px;
-    display: flex;
-    background: #fff;
-  }
   .addPanel ul {
     list-style: none;
     display: flex;
@@ -36,7 +14,7 @@
   .addPanel ul li button {
     width: 100%;
   }
-  .centerBox {
+  .centerPanel {
     margin: 0 auto;
     background-color: #fff;
     max-width: 700px;
@@ -50,7 +28,7 @@
       .ant-form-item-action {
         position: absolute;
         top: 8px;
-        right: 20px;
+        right: 16px;
       }
       .ant-form-item-action i.anticon {
         font-size: 24px;
@@ -73,6 +51,9 @@
     :global {
       .rowItemWrapper {
         position: relative;
+      }
+      .ant-form-item {
+        margin-bottom: 0;
       }
       .ant-card-body {
         padding-right: 50px;
