--- a/src/modules/Form/pages/Designer.less
+++ b/src/modules/Form/pages/Designer.less
@@ -22,9 +22,6 @@
       .ant-form-item:hover {
         background: #d8e6df;
       }
-      .ant-form-item {
-        cursor: pointer;
-      }
       .ant-form-item-action {
         position: absolute;
         top: 8px;
@@ -40,10 +37,19 @@
         margin-left: 8px;
       }
       .rowItemWrapper {
+        cursor: pointer;
         position: relative;
       }
       .active {
         background: #d8e6df;
+      }
+      .active:hover {
+        cursor: move;
+      }
+      .ant-radio-group.vertical label, .ant-checkbox-group.vertical label {
+        display: block;
+        height: 30px;
+        line-height: 30px;
       }
     }
   }
@@ -56,12 +62,12 @@
         margin-bottom: 0;
       }
       .ant-card-body {
-        padding-right: 50px;
+        padding-right: 80px;
       }
       .ant-form-item-action {
         position: absolute;
         top: 4px;
-        right: -40px;
+        right: -64px;
       }
       .ant-form-item-action i.anticon {
         font-size: 16px;
