表单管理-表单模板 (#168)

--- a/src/modules/Form/components/OopFormDesigner.less
+++ b/src/modules/Form/components/OopFormDesigner.less
@@ -51,6 +51,13 @@
         height: 30px;
         line-height: 30px;
       }
+      .ant-card-body {
+        height: calc(~"100vh - 250px");
+        overflow-y: auto;
+      }
+      .ant-card-extra {
+        padding-bottom: 0;
+      }
     }
   }
   .editPanel {
