表单模板关联 表单详细 (#172)
[完美][develop][PEP-527]表单模板关联 表单详细
1.表单设计组件抽取
2.关联表单模板功能

--- a/src/modules/Form/components/OopFormDesigner.less
+++ b/src/modules/Form/components/OopFormDesigner.less
@@ -56,7 +56,10 @@
         overflow-y: auto;
       }
       .ant-card-extra {
-        padding-bottom: 0;
+        //padding-bottom: 0;
+      }
+      .ant-card-head-title button {
+        margin-left: 8px;
       }
     }
   }
