app版本管理增加二维码，修改下载链接等 (#219)
1.app版本管理增加二维码，修改下载链接
2.修改写死的主题色
3.修改登录页的布局小bug
4.还原表单管理

--- a/src/components/OopTreeTable/index.less
+++ b/src/components/OopTreeTable/index.less
@@ -1,3 +1,5 @@
+@import "~antd/lib/style/themes/default.less";
+
 .OopTreeTable {
   :global {
     .ant-card-head {
@@ -7,5 +9,8 @@
     .ant-card-head .ant-card-head-title {
       padding-bottom: 0;
     }
+  }
+  .primaryColor {
+    color: @primary-color;
   }
 }
