--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -8,14 +8,16 @@
   background-position: center top;
   background-size: cover;
   position: relative;
+  overflow-x: hidden;
 }
 .panel {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   height: 100%;
   padding: 6% 50px;
   background: #fff;
+  overflow-y: auto;
 }
 //.container {
 //  display: flex;
