--- a/src/modules/Devtools/pages/Appver.less
+++ b/src/modules/Devtools/pages/Appver.less
@@ -53,13 +53,14 @@
         display: flex;
         flex-direction: row;
         margin-bottom: 16px;
-
+        margin-left: 12px;
         .listDivLeft {
           width: 90px;
-          text-align: right;
           padding-right: 12px;
         }
-
+        .listDivLeft a {
+          margin-left: 4px;
+        }
         .listDivRight {
           width: 386px;
         }
@@ -87,6 +88,11 @@
       word-wrap: break-word;
       word-break: break-all;
       white-space: normal;
+    }
+    :global {
+      .ant-popover-inner-content {
+        padding-top: 0;
+      }
     }
   }
 }
