新增OopModal组件 内置 纵向的tab子组件 (#229)

--- a/src/components/OopModal/index.less
+++ b/src/components/OopModal/index.less
@@ -1,8 +1,8 @@
 .oopModalContainer {
-  position: absolute;
-  top: 20px;
-  width: 100%;
-  left: -16px;
+  //position: absolute;
+  //top: 20px;
+  //width: 100%;
+  //left: -16px;
   :global {
     .ant-modal-body {
       height: ~"calc(100vh - 144px)";
@@ -20,7 +20,7 @@
     }
     .ant-popover-placement-left, .ant-popover-placement-leftTop, .ant-popover-placement-leftBottom {
       left: 199px !important;
-      top: 0 !important;
+      top: 20px !important;
     }
   }
   .oopTabContainer {
