[完美][pep-636][develop]UDE权限改版-扩展oopTable组件 (#231)
* [完美][pep-636][develop]UDE权限改版-扩展oopTable组件

1.记录数据状态显示当前状态
2.点击单行和多选按钮实现单条数据的操作
3.全选可以批量操作（前台实现功能，但需要补充接口）

* [完美][pep-636][develop]UDE权限改版-扩展oopTable组件

1.修改变量名称
2.添加单行小手样式
3.隐藏全选框（暂无批量操作接口）

--- a/src/components/OopTable/index.less
+++ b/src/components/OopTable/index.less
@@ -8,4 +8,16 @@
   .toolbar button {
     margin-left: 10px;
   }
+  .rowHover {
+    :global {
+      .ant-table-selection-column {
+        .ant-table-selection {
+          display: none;
+        }
+      }
+      .ant-table-tbody {
+        cursor: pointer;
+      }
+    }
+  }
 }
