[未完成][develop][PEP-685]UED落地之整合代码 (#243)
* 修改OopModal

* 修改Authbug

--- a/src/components/OopModal/index.less
+++ b/src/components/OopModal/index.less
@@ -19,8 +19,9 @@
       margin-bottom: 8px;
     }
     .ant-popover-placement-left, .ant-popover-placement-leftTop, .ant-popover-placement-leftBottom {
-      left: 199px !important;
+      left: ~"calc((100vw - 1000px)/2 - 140px - 20px)" !important;
       top: 20px !important;
+      position: fixed;
     }
   }
   .oopTabContainer {
