修改前端修改OopSearch静态数据过滤不准确 (#251)
1.修改前端修改OopSearch静态数据过滤不准确的bug 业务入参增加columns参数
2.修改OopTable图标过小的问题现在为18px 之前 是14px
3.扩展OopSearch的extra props

--- a/src/components/OopSearch/index.less
+++ b/src/components/OopSearch/index.less
@@ -56,7 +56,7 @@
     z-index: 3;
     width: 100%;
   }
-  .primaryColor {
-    text-decoration: @primary-color dashed underline;
-  }
+}
+.primaryColor {
+  color: @primary-color;
 }
