--- a/src/layouts/CustomFrameLayout.less
+++ b/src/layouts/CustomFrameLayout.less
@@ -7,7 +7,7 @@
     .ant-layout {
       height: 100%;
       background: #fff;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     .ant-layout-content {
