--- a/src/components/CustomFrame/Workflow/index.less
+++ b/src/components/CustomFrame/Workflow/index.less
@@ -57,6 +57,7 @@
   }
   .listItemWrapper {
     padding-left: 15px;
+    border-bottom: 1px solid #ddd;
     & > .listLine {
       padding: 12.5px 15px 12.5px 0;
     }
