--- a/src/components/CustomFrame/Workflow/index.less
+++ b/src/components/CustomFrame/Workflow/index.less
@@ -59,7 +59,7 @@
     padding-left: 15px;
     border-bottom: 1px solid #ddd;
     & > .listLine {
-      padding: 12.5px 15px 12.5px 0;
+      padding: 0;
     }
     .listContent {
       color: rgba(0, 0, 0, 0.65);
