--- a/src/layouts/CustomFrameLayout.less
+++ b/src/layouts/CustomFrameLayout.less
@@ -8,6 +8,7 @@
       height: 100%;
       background: #fff;
       overflow-x: hidden;
+      overflow-y: auto;
     }
 
     .ant-layout-content {
@@ -15,6 +16,36 @@
       display: flex;
       flex: 1;
     }
+  }
+  .header {
+    min-height: 44px;
+    display: flex;
+    box-shadow: 0 1px 6px #ccc;
+    width: 100%;
+    top: 0;
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    left: 0;
+    height: 44px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-bottom: 0;
+    background-color: #f7f7f7;
+  }
+  .backBtn {
+    border: 0;
+    align-items: center;
+    height: 100%;
+    padding: 0;
+  }
+  .title {
+    display: flex;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    margin-left: calc(~"100vw/2 - 50px - 32px");
   }
 }
 
