[完美][develop]人员选择组件左侧菜单支持树形结构显示 (#278)

--- a/src/components/OopTabTableModal/index.less
+++ b/src/components/OopTabTableModal/index.less
@@ -7,19 +7,8 @@
     height: 22px;
   }
 
-  .listItem {
-    border-radius: 2px;
-    &:hover {
-      background-color: #e6f7ff;
-      cursor: pointer;
-    }
-    &.listItemActive {
-      background-color: #bae7ff;
-    }
-    .listItemContentWrapper {
-      width: 100%;
-      padding: 0 5px;
-    }
+  .tree {
+    overflow: auto;
   }
 }
 :global(.has-error) {
