1.按照后台的新数据接口调整 2.支持消息模式进入办理页面3 (#303)
1.工作流按照后台的新数据接口调整
2.支持消息模式进入办理页面
3.数据字典下拉动态查询

--- a/src/lib/components/WebApp/Workflow/index.less
+++ b/src/lib/components/WebApp/Workflow/index.less
@@ -3,7 +3,7 @@
   width: 100%;
   & > :global(.ant-tabs) {
     width: 100%;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     background-color: white;
     & > :global(.ant-tabs-bar) {
