--- a/src/lib/components/WebApp/WorkflowMainPop/index.less
+++ b/src/lib/components/WebApp/WorkflowMainPop/index.less
@@ -1,9 +1,11 @@
 .container {
   width: 100%;
   overflow-y: auto;
+  position: relative;
   :global {
     .ant-tabs-tabpane {
       padding: 0 16px;
+      min-height: 32px;
     }
   }
 }
