更新灰度环境的小bug (#310)
1.工作流移动端列表时间问题 显示
2.滚动条样式问题
3.App回退问题

--- a/src/framework/index/index.less
+++ b/src/framework/index/index.less
@@ -35,7 +35,7 @@ body {
 // scrollbar style
 ::-webkit-scrollbar {
   width: 6px;
-  height: 6px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track-piece {
@@ -51,6 +51,6 @@ body {
 
 ::-webkit-scrollbar-thumb:horizontal {
   width: 5px;
-  background-color: #ccc;
+  background-color: #999;
   -webkit-border-radius: 6px;
 }
