--- a/src/lib/components/WebApp/Workflow/index.less
+++ b/src/lib/components/WebApp/Workflow/index.less
@@ -93,6 +93,11 @@
     .listContent {
       color: rgba(0, 0, 0, 0.65);
     }
+    :global {
+      .ant-list-item-content {
+        flex: none;
+      }
+    }
   }
   .listItemWrapper:last-child {
     margin-bottom: 0;
