Pea develop 0808 workflow auth setting (#311)
* 更新灰度环境的小bug

1.工作流移动端列表时间问题 显示
2.滚动条样式问题
3.App回退问题

* header返回按钮 去掉border效果

--- a/src/framework/layouts/WebAppLayout.less
+++ b/src/framework/layouts/WebAppLayout.less
@@ -34,6 +34,13 @@
     border-bottom: 0;
     background-color: #f7f7f7;
     justify-content: space-between;
+    :global {
+      .ant-btn-clicked {
+        &:after {
+          border: 0;
+        }
+      }
+    }
   }
   .backBtn {
     border: 0;
