--- a/src/lib/components/OopForm/index.less
+++ b/src/lib/components/OopForm/index.less
@@ -23,3 +23,14 @@
     text-align: center;
   }
 }
+//&:global {
+//  .descriptionList {
+//    .detail {
+//      line-height: unset;
+//      padding-bottom: 0;
+//    }
+//  }
+//}
+.descriptionList {
+  display: none;
+}
