工作流增加已办页面等
1.工作流增加“已办”页面
2.workflowMainPop 工作流办理移动端和PC单点进入组件 接受 base64的参数业务参数
3.修改OopWorkflowMain 表单没有查出来可以提交的bug

--- a/src/lib/components/OopForm/index.less
+++ b/src/lib/components/OopForm/index.less
@@ -16,21 +16,20 @@
           white-space: pre-wrap;
           word-break: break-all;
         }
+        .ant-form-item-children {
+          width: 100%;
+          .ant-calendar-picker {
+            display: block;
+            width: 100%;
+          }
+          .ant-input-number {
+            width: 100%;
+          }
+        }
       }
     }
   }
   & > h3 {
     text-align: center;
   }
-}
-//&:global {
-//  .descriptionList {
-//    .detail {
-//      line-height: unset;
-//      padding-bottom: 0;
-//    }
-//  }
-//}
-.descriptionList {
-  display: none;
 }
