--- a/src/lib/components/WebApp/Workflow/index.less
+++ b/src/lib/components/WebApp/Workflow/index.less
@@ -15,7 +15,7 @@
   :global {
     .ant-spin-container {
       background: #f5f5f5;
-      min-height: calc(~"100vh - 88px");
+      min-height: calc(~"100vh - 44px");
     }
     .ant-list-item-meta-description {
       margin-top: 12px;
@@ -109,5 +109,13 @@
     font-size: 16px;
     padding-right: 8px;
     color: @primary-color;
+  }
+}
+
+@media screen and (max-width: @screen-xs) {
+  :global {
+    .ant-spin-container {
+      min-height: calc(~"100vh - 88px") !important;
+    }
   }
 }
