Pea develop 0815 workflow (#317)
* 在flowable的前端页面里获取表单属性的请求  需要设置请求前缀

1.在flowable的前端页面里获取表单属性的请求  需要设置请求前缀
2.自定义表单中“系统当前”组件 在设置表单的时候不设置默认值
3.修改工作流占满高导致的样式问题

* 之前在gitlab上改的代码同步上去

* pl08

--- a/src/lib/components/OopForm/index.less
+++ b/src/lib/components/OopForm/index.less
@@ -19,7 +19,7 @@
         .ant-form-item-children {
           width: 100%;
           .ant-calendar-picker {
-            display: block;
+            display: inline-block;
             width: 100%;
           }
           .ant-input-number {
