[完美][develop][PEP-943] 工作流拆分入口等 (#327)
* 工作流拆分入口等

1.工作流入口拆分 所有移动端都从业务为 入口  即增加入口页面Workflow\Launch\index.js
2.增加为WebAppLayout增加可以修改头部样式和方法的接口
3.增加OopWorkflowMain工作流核心组件 增加发起时可以查看流程图
4.修改发起业务规则， 所有流程发起都走统一接口 查询数据后再渲染

* pl rc11

--- a/src/framework/index/index.less
+++ b/src/framework/index/index.less
@@ -31,6 +31,9 @@ body {
   .ant-notification-notice-message {
     word-break: break-all;
   }
+  .ant-input-disabled {
+    cursor: text !important;
+  }
 }
 // scrollbar style
 ::-webkit-scrollbar {
