--- a/src/lib/components/WebApp/Workflow/History/index.less
+++ b/src/lib/components/WebApp/Workflow/History/index.less
@@ -39,7 +39,7 @@
 .tabsContent {
   width: 100%;
   margin: 0 5px;
-  padding-top: 44px;
+  //padding-top: 44px;
   height: 100%;
   // overflow: hidden;
   &.tabsContentAnimated {
@@ -119,7 +119,7 @@
     :global {
       .ant-list.ant-list-split {
         .ant-spin-container {
-          min-height: calc(~"100vh - 88px") !important;
+          min-height: calc(~"100vh - 44px") !important;
         }
       }
     }
