[完美][develop][]8.24 appconfig 右键弹框出现线条问题 (#330)
* a

* a

--- a/src/lib/components/OopTreeTable/index.less
+++ b/src/lib/components/OopTreeTable/index.less
@@ -9,6 +9,9 @@
     .ant-card-head .ant-card-head-title {
       padding-bottom: 0;
     }
+    .popoverLine:not(:last-child):before {
+      border-left: 0 !important;
+    }
   }
   .primaryColor {
     color: @primary-color;
